<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="6dp"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <!--android:background="@drawable/shape_parrafo"-->

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:src="@drawable/banner_beer_conf"
                        android:scaleType="centerCrop"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="6dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:src="@drawable/conference_beer"
                        android:scaleType="centerCrop"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="6dp"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textSize="@dimen/tamanioSubtitulo"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>